--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
+    "emailjs-com": "^2.4.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "nouislider": "^14.1.1",
     "perfect-scrollbar": "^1.5.0",
     "react": "^16.12.0",
+    "react-bootstrap-sweetalert": "^5.1.9",
     "react-bootstrap-switch": "^15.5.3",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
