--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-vertical-timeline-component": "^2.5.0",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
