--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-switch": "^15.5.3",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
+    "react-multi-carousel": "^2.5.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-vertical-timeline-component": "^2.5.0",
