--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#17a2b8",
-  "background_color": "#17a2b8"
+  "theme_color": "#171941",
+  "background_color": "#171941"
 }
